// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Output File Strategy should --symbolsWithOwnFile [class, interface]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/somenamespace/somenamespace.md",
  "module-1/namespaces/somenamespace/classes/namespaceclassa.md",
  "module-1/namespaces/somenamespace/interfaces/namespaceinterface.md",
  "module-1/classes/module1classa.md",
  "module-1/classes/module1classb.md",
  "module-1/interfaces/module1interfacea.md",
  "module-1/interfaces/module1interfaceb.md",
  "module-2/module-2.md",
  "module-2/classes/module2classa.md",
  "module-2/classes/module2classb.md",
  "module-2/interfaces/module2interfacea.md",
  "module-2/interfaces/module2interfaceb.md",
]
`;

exports[`Output File Strategy should --symbolsWithOwnFile [class]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/somenamespace/somenamespace.md",
  "module-1/namespaces/somenamespace/classes/namespaceclassa.md",
  "module-1/classes/module1classa.md",
  "module-1/classes/module1classb.md",
  "module-2/module-2.md",
  "module-2/classes/module2classa.md",
  "module-2/classes/module2classb.md",
]
`;

exports[`Output File Strategy should set --symbolsWithOwnFile none' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/somenamespace.md",
  "module-2.md",
]
`;

exports[`Output File Strategy should set default --symbolsWithOwnFile 'all' (modules) 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/somenamespace/somenamespace.md",
  "module-1/namespaces/somenamespace/enums/namespaceenum.md",
  "module-1/namespaces/somenamespace/classes/namespaceclassa.md",
  "module-1/namespaces/somenamespace/interfaces/namespaceinterface.md",
  "module-1/namespaces/somenamespace/types/namespacetypeliteral.md",
  "module-1/namespaces/somenamespace/variables/namespacevariable.md",
  "module-1/enums/module1enuma.md",
  "module-1/enums/module1enumb.md",
  "module-1/classes/module1classa.md",
  "module-1/classes/module1classb.md",
  "module-1/interfaces/module1interfacea.md",
  "module-1/interfaces/module1interfaceb.md",
  "module-1/types/module1typeliterala.md",
  "module-1/types/module1typeliteralb.md",
  "module-1/variables/module1variablea.md",
  "module-1/variables/module1variableb.md",
  "module-1/functions/module1functiona.md",
  "module-1/functions/module1functionb.md",
  "module-2/module-2.md",
  "module-2/enums/module2enuma.md",
  "module-2/enums/module2enumb.md",
  "module-2/classes/module2classa.md",
  "module-2/classes/module2classb.md",
  "module-2/interfaces/module2interfacea.md",
  "module-2/interfaces/module2interfaceb.md",
  "module-2/types/module2typeliterala.md",
  "module-2/types/module2typeliteralb.md",
  "module-2/variables/module2variablea.md",
  "module-2/variables/module2variableb.md",
  "module-2/functions/module2functiona.md",
  "module-2/functions/module2sfunctionb.md",
]
`;

exports[`Output File Strategy should set default --symbolsWithOwnFile 'all' (namespaces) 1`] = `
[
  "modules.md",
  "README.md",
  "classes/classes.md",
  "classes/classes/animal.md",
  "classes/classes/base.md",
  "classes/classes/c.md",
  "classes/classes/derived.md",
  "classes/classes/dog.md",
  "classes/classes/indexableclass.md",
  "classes/classes/point.md",
  "declarations/declarations.md",
  "declarations/enums/enumdeclarations.md",
  "declarations/enums/enumdeclarationswithdefaults.md",
  "declarations/types/anyfunctiontype.md",
  "declarations/variables/double-underscores-declaration.md",
  "declarations/variables/enuref.md",
  "declarations/variables/getterandsetter.md",
  "declarations/variables/indexabledeclaration.md",
  "declarations/variables/objectliteralasconstdeclaration.md",
  "declarations/variables/objectliteraldeclaration.md",
  "declarations/variables/stringconstwithdefaultvalue.md",
  "declarations/variables/stringletwithdefaultvalue.md",
  "declarations/variables/typeliteraldeclaration.md",
  "declarations/variables/undefinednumberdeclaration.md",
  "declarations/functions/functiondeclaration.md",
]
`;

exports[`Output File Strategy should set default --symbolsWithOwnFile 'none' (namespaces) 1`] = `
[
  "modules.md",
  "README.md",
  "classes.md",
  "declarations.md",
]
`;

exports[`Output File Strategy should set symbolsWithOwnFile [enum, types, variables]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/somenamespace/somenamespace.md",
  "module-1/namespaces/somenamespace/enums/namespaceenum.md",
  "module-1/namespaces/somenamespace/types/namespacetypeliteral.md",
  "module-1/namespaces/somenamespace/variables/namespacevariable.md",
  "module-1/enums/module1enuma.md",
  "module-1/enums/module1enumb.md",
  "module-1/types/module1typeliterala.md",
  "module-1/types/module1typeliteralb.md",
  "module-1/variables/module1variablea.md",
  "module-1/variables/module1variableb.md",
  "module-2/module-2.md",
  "module-2/enums/module2enuma.md",
  "module-2/enums/module2enumb.md",
  "module-2/types/module2typeliterala.md",
  "module-2/types/module2typeliteralb.md",
  "module-2/variables/module2variablea.md",
  "module-2/variables/module2variableb.md",
]
`;
